convert markdown to html

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 
 </html>
