--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/prism.js"></script> -->
 </body>
 
 </html>
